# matrix

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ah.sh  ap.sh  as.sh  compile_commands.json  concepts.hpp  conventions.md  coordinate.hpp  damped_trigonometric_regression.hpp  errors.cpp  errors.hpp  exponential_regression.hpp  exponential_regression_2.hpp  fourier.hpp  gaussian_regression.hpp  linear_regression.hpp  lm_regression.hpp  logarithmic_regression.hpp  logistic_regression.hpp  main.cpp  matrix.hpp  polynomial_regression.hpp  power_regression.hpp  proportional_regression.hpp  regression.hpp  regression_stats.hpp  tests.hpp  trigonometric_regression.hpp
